--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Vite + TS</title>
   </head>
   <body>
+    <div class="rocket"></div>
     <div class="calculator">
       <div class="display">
         <div class="display__text"></div>
@@ -30,8 +31,8 @@
         <div class="button">2</div>
         <div class="button">3</div>
         <div class="button button__orange">+</div>
-        <div class="button">0</div>
-        <div class="button">0</div>
+        <div class="button double-zero">0</div>
+        
         <div class="button">.</div>
         <div class="button button__orange">=</div>
         
