add functionality for non-operator buttons

--- a/index.html
+++ b/index.html
@@ -18,22 +18,21 @@
         <button class="button button__grey button__clear">C</button>
         <button class="button button__grey button__clearEntry">CE</button>
         <button class="button button__grey">%</button>
-        <button class="button button__orange button__divide">÷</button>
-        <button class="button button__number-button ">7</button>
-        <button class="button button__number-button">8</button>
-        <button class="button button__number-button">9</button>
-        <button class="button button__orange button__times">×</button>
-        <button class="button button__number-button">4</button>
-        <button class="button button__number-button">5</button>
-        <button class="button button__number-button">6</button>
-        <button class="button button__orange button__minus">-</button>
-        <button class="button button__number-button">1</button>
-        <button class="button button__number-button">2</button>
-        <button class="button button__number-button">3</button>
-        <button class="button button__orange button__plus">+</button>
-        <button class="button  button__number-button double-zero">0</button>
-        
-        <button class="button button__number-button">.</button>
+        <button class="button button__orange button__divide button__operator">÷</button>
+        <button class="button button__number ">7</button>
+        <button class="button button__number">8</button>
+        <button class="button button__number">9</button>
+        <button class="button button__orange button__times button__operator">×</button>
+        <button class="button button__number">4</button>
+        <button class="button button__number">5</button>
+        <button class="button button__number">6</button>
+        <button class="button button__orange button__minus button__operator">-</button>
+        <button class="button button__number">1</button>
+        <button class="button button__number">2</button>
+        <button class="button button__number">3</button>
+        <button class="button button__orange button__plus button__operator">+</button>
+        <button class="button  button__number double-zero">0</button>
+        <button class="button button__number button__decimal">.</button>
         <button class="button button__orange button__equals">=</button>
         
       </div>
