add % functionality and change background img

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class="rocket"></div>
     <div class="calculator">
       <div class="display">
-        <input class="display__text" id="input" maxlength="9"></input>
+        <input class="display__text" readonly id="input" maxlength="9" autocomplete="off"></input>
       </div>
       <div class="buttons">
         
         <button class="button button__grey button__clear">C</button>
         <button class="button button__grey button__clearEntry">CE</button>
-        <button class="button button__grey">%</button>
+        <button class="button button__grey button__percent">%</button>
         <button class="button button__orange button__divide button__operator">÷</button>
         <button class="button button__number ">7</button>
         <button class="button button__number">8</button>
