add extra buttons for larger screens

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <input class="display__text__second" readonly id="input" maxlength="15" autocomplete="off"></input>
         <input class="display__text" readonly id="input" maxlength="9" autocomplete="off"></input>
       </div>
-      <div class="buttons">
-        
+      <div class="buttons__container">
+        <div class="buttons">
         <button class="button button__grey button__clear">C</button>
-        <button class="button button__grey button__clearEntry">CE</button>
+        <button class="button button__grey button__clearEntry">⌫</button>
         <button class="button button__grey button__percent button__toDisable">%</button>
         <button class="button button__orange button__divide button__operator button__toDisable">÷</button>
         <button class="button button__number ">7</button>
@@ -40,6 +40,18 @@
         <button class="button button__number button__decimal button__toDisable">.</button>
         <button class="button button__orange button__equals ">=</button>
         
+      </div>
+      <div class="buttons__extra">
+        <button class="button extra__button">+/-</button>
+        <button class="button extra__button">R</button>
+        <button class="button extra__button">x²</button>
+        <button class="button extra__button">x³</button>
+        <button class="button extra__button">√</button>
+        <button class="button extra__button">1⁄x</button>
+        <button class="button extra__button">(</button>
+        <button class="button extra__button">)</button>
+        <button class="button extra__button">M1</button>
+        <button class="button extra__button">M2</button>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
