--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <div class="calculator">
       
       <div class="display">
-        <input class="display__text__second" readonly id="input" maxlength="15" autocomplete="off"></input>
-        <input class="display__text" readonly id="input" maxlength="9" autocomplete="off"></input>
+        <input class="display__text__second" readonly id="input2" autocomplete="off"></input>
+        <input class="display__text" readonly id="input1" maxlength="9" utocomplete="off"></input>
       </div>
       <div class="buttons__container">
         <div class="buttons">
         <button class="button button__grey button__clear">C</button>
         <button class="button button__grey button__clearEntry">⌫</button>
-        <button class="button button__grey button__percent button__toDisable">%</button>
+        <button class="button button__grey button__percent ">%</button>
         <button class="button button__orange button__divide button__operator button__toDisable">÷</button>
         <button class="button button__number ">7</button>
         <button class="button button__number">8</button>
@@ -37,13 +37,13 @@
         <button class="button button__number">3</button>
         <button class="button button__orange button__plus button__operator button__toDisable">+</button>
         <button class="button button__number double-zero">0</button>
-        <button class="button button__number button__decimal button__toDisable">.</button>
+        <button class="button button__number button__decimal ">.</button>
         <button class="button button__orange button__equals ">=</button>
         
       </div>
       <div class="buttons__extra">
-        <button class="button extra__button">+/-</button>
-        <button class="button extra__button">R</button>
+        <button class="button extra__button signChange">+/-</button>
+        <button class="button extra__button button__round">R</button>
         <button class="button extra__button">x²</button>
         <button class="button extra__button">x³</button>
         <button class="button extra__button">√</button>
