fix bugs for extra buttons, add magic wand

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
       <div class="buttons__extra">
         <button class="button extra__button signChange">+/-</button>
         <button class="button extra__button button__round">R</button>
-        <button class="button extra__button">x²</button>
-        <button class="button extra__button">x³</button>
-        <button class="button extra__button">√</button>
-        <button class="button extra__button">1⁄x</button>
-        <button class="button extra__button">(</button>
-        <button class="button extra__button">)</button>
-        <button class="button extra__button">M1</button>
-        <button class="button extra__button">M2</button>
+        <button class="button extra__button button__square">x²</button>
+        <button class="button extra__button button__cube">x³</button>
+        <button class="button extra__button button__root">√</button>
+        <button class="button  button__fraction">🪄</button>
+        <button class="button extra__button button__leftBracket ">(</button>
+        <button class="button extra__button button__rightBracket ">)</button>
+        <button class="button extra__button button__memoryOne">M</button>
+        <button class="button extra__button button__memoryTwo">CM</button>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
