remove scrolling from magic-wand

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <button class="button button__number">6</button>
         <button class="button button__orange button__minus button__operator button__toDisable">-</button>
         <button class="button button__number">1</button>
-        <button class="button button__number">2</button>
+        <button class="button button__number button2">2</button>
         <button class="button button__number">3</button>
-        <button class="button button__orange button__plus button__operator button__toDisable">+</button>
+        <button class="button button__orange button__plus button__operator button__toDisable button__plus">+</button>
         <button class="button button__number double-zero">0</button>
         <button class="button button__number button__decimal ">.</button>
         <button class="button button__orange button__equals ">=</button>
